# dog-breed-recognition-backend

./: Dockerfile  README.md  docker-compose.yml  downloader.py  helpers.py  main.py  pyproject.toml  requirements.txt  server.py
.github/workflows/: deploy-to-production.yml  deploy-to-test.yml
models/dog_breeds_v1/: fingerprint.pb  keras_metadata.pb  saved_model.pb
models/dog_breeds_v1/variables/: variables.index
